# sushi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanbuildinfo.cmake  conaninfo.txt  readme.md
Core/Core/Core/: Component.swift  Core.h  ErrorTypes.swift  Node.swift  NodeID.swift  Scene.swift
Core/Core/Core.xcodeproj/: project.pbxproj
Core/Window/Window/: Window.h  Window.swift
Core/Window/Window.xcodeproj/: project.pbxproj
Renderer/Renderer.xcworkspace/: contents.xcworkspacedata
Renderer/Renderer/Renderer/: Block.swift  BlockModifier.swift  Camera.swift  Filter.swift  Layer.swift  Renderer.h  Resolver.swift  Scene.swift
Renderer/Renderer/Renderer.xcodeproj/: project.pbxproj
Renderer/RendererApp/RendererApp/: AppDelegate.swift  ViewController.swift
Renderer/RendererApp/RendererApp.xcodeproj/: project.pbxproj
Renderer/RendererMetal/RendererMetal/: LayerMetal.swift  RendererMetal.h  SceneMetal.swift
Renderer/RendererMetal/RendererMetal.xcodeproj/: project.pbxproj
Sushi.xcworkspace/: contents.xcworkspacedata
app/windows/: CMakeLists.txt  CMakeSettings.json
app/windows/src/: application.cpp
apptest/apptest/: main.swift  windowLogic.swift
apptest/apptest.xcodeproj/: project.pbxproj
apptest/apptest/ios/: iosApplicationDriver.swift  iosGraphicsDriver.swift  iosStorageManagerDriver.swift  iosWindowDriver.swift  iosWindowDriverVC.swift
apptest/apptest/resources/: shader.metal  textureMapped.metal
apptestmac/apptestmac/: windowLogic2.swift
apptestmac/apptestmac.xcodeproj/: project.pbxproj
apptestmac/apptestmac/macOS/: macosApplicationDriver.swift  macosWindowDriver.swift  macosWindowDriverVC.swift
core/: CMakeLists.txt  CMakeSettings.json
core/src/application/: application-methods.c  application-methods.h  application.h
core/src/core/: matrix-methods.c  matrix-methods.h  matrix.h  pointer-attribute.h  rect-methods.c  rect-methods.h  rect.h  scalar-methods.c  scalar-methods.h  scalar.h  str-methods.c  str-methods.h  str.h  vector.h
core/src/input/: input.h
core/src/window/: window-methods.c  window-methods.h  window.h
platform/android/app/: build.gradle  proguard-rules.pro
platform/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
platform/android/platform/: CMakeLists.txt  application.cpp  application.hpp
platform/ios/Sushi.xcworkspace/: contents.xcworkspacedata
platform/ios/src/: application.h  application.m
platform/macos/: CMakeLists.txt
platform/macos/src/application/: application.h  application.m
platform/windows/: CMakeLists.txt  CMakeSettings.json  windows.sln
platform/windows/driver/: driver.vcxproj  driver.vcxproj.filters
platform/windows/driver/application/: application.cpp  application.h  window.cpp  window.h
platform/windows/src/: ApplicationPayload.h
platform/windows/src/application/: applicaiton.h  application.c  application.h
platform/windows/src/window/: window.c  window.h
platform/windows/sushi/su_wnd/sushi_wnd.dir/Debug/sushi_wnd.tlog/: CL.read.1.tlog
platform/windows/windows/: windows.vcxproj
src/application/: application-methods.c  application-methods.h  application.h
src/core/: matrix-methods.c  matrix-methods.h  matrix.h  pointer-ownership.h  scalar-methods.c  scalar-methods.h  scalar.h  str-methods.c  str-methods.h  str.h  vector.h
src/input/: input.h
src/window/: window-methods.h  window.h
sushi/: CMakeLists.txt
sushi.xcworkspace/: contents.xcworkspacedata
sushi/application/: CMakeLists.txt
sushi/application/src/: application.cpp  application.hpp  applicationGraphicsDevice.cpp  applicationGraphicsDevice.hpp
sushi/core/: CMakeLists.txt
sushi/core/src/: define.h  rect-def.hpp  rect.hpp  vector-def.hpp  vector.hpp
sushi/window/: CMakeLists.txt
sushi/window/src/: window.cpp  window.hpp  windowLogic.cpp  windowLogic.hpp  windowSwapChain.cpp  windowSwapChain.hpp
sushiapplication/sushiapplication/: Application.swift  ApplicationDriver.swift  sushiapplication.h
sushiapplication/sushiapplication.xcodeproj/: project.pbxproj
sushiapplication/sushiapplicationTests/: sushiapplicationTests.swift
sushicore/sushicore/: FastFail.swift  sushicore.h
sushicore/sushicore.xcodeproj/: project.pbxproj
sushicore/sushicore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sushicore/sushicore/Dimensional/: Dimensional.swift  DimensionalConstructors.swift  DimensionalOperations.swift  Matrix.swift  Point.swift  Rectangle.swift  Vector.swift
sushicore/sushicoreTests/: sushicoreTests.swift
sushicpp/: sushicpp.sln
sushicpp/appTest/: windowLogic.hpp  windowLogic.mm
sushicpp/appTestIOS/appTestIOS/: main.mm
sushicpp/appTestIOS/appTestIOS.xcodeproj/: project.pbxproj
sushicpp/appTestMacOS/appTestMacOS/: Info.plist  main.mm
sushicpp/appTestMacOS/appTestMacOS.xcodeproj/: project.pbxproj
sushicpp/sushi.xcworkspace/: contents.xcworkspacedata
sushicpp/sushiapplication/sushiapplication/: application.hpp  applicationDriver.hpp  window.hpp
sushicpp/sushiapplication/sushiapplicationwin32/: sushiapplication.vcxproj
sushicpp/sushicore/sushicore/: CoreObject.h  FastFail.h  Matrix.h  PointerOwnership.h  Rectangle.h  Vector.h
sushigraphics/sushigraphics/: GraphicsDevice.swift  GraphicsDeviceDriver.swift  GraphicsSurface.swift
sushigraphics/sushigraphics.xcodeproj/: project.pbxproj
sushigraphics/sushigraphicsTests/: sushigraphicsTests.swift
sushiinput/sushiinput/: InputDispatcher.swift  InputSource.swift  InputSourceDriver.swift  sushiinput.h
sushiinput/sushiinput.xcodeproj/: project.pbxproj
sushiinput/sushiinputmac/: sushiinputmac.h
sushistorage/sushistorage/: StorageEntry.swift  StorageManager.swift
sushistorage/sushistorage.xcodeproj/: project.pbxproj
sushistorage/sushistoragemac/: sushistoragemac.h
sushiswift/sushi.xcworkspace/: contents.xcworkspacedata
sushiwindow/sushiwindow/: Window.swift  WindowDriver.swift  WindowEnum.swift
sushiwindow/sushiwindow.xcodeproj/: project.pbxproj
sushiwindow/sushiwindowTests/: sushiwindowTests.swift
sushiwindow/sushiwindowmac/: sushiwindowmac.h
test/windows/: CMakeLists.txt
(+116 files in other folders)
